force-app/main/default/objects/COM_ApprovalLineMgmt__c/COM_ApprovalLineMgmt__c.object-meta.xml
<CustomObject>
    <description>승인 유형별 승인 라인 관리</description>
    <label>Approval Line Mgmt</label>
    <nameField>
        <displayFormat>ALM_{YY}{MM}{DD}-{00000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval Line Mgmt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>