force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/Approver1_lk__c.field-meta.xml
<CustomField>
    <fullName>Approver1_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Request_Mgmt</relationshipName>
    <type>Lookup</type>
</CustomField>