force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/Approver2_lk__c.field-meta.xml
<CustomField>
    <fullName>Approver2_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Various_Request_Mgmt1</relationshipName>
    <type>Lookup</type>
</CustomField>