force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/ApproverLine__c.field-meta.xml
<CustomField>
    <fullName>ApproverLine__c</fullName>
    <label>Approver Line</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>