force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/ApproveType__c.field-meta.xml
<CustomField>
    <fullName>ApproveType__c</fullName>
    <label>Approve Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acc_New</fullName>
            </value>
            <value>
                <fullName>Acc_KYC</fullName>
            </value>
            <value>
                <fullName>Acc_Activation</fullName>
            </value>
            <value>
                <fullName>IPL_Posting</fullName>
            </value>
            <value>
                <fullName>OutwardFund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>