force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/BizArea__c.field-meta.xml
<CustomField>
    <fullName>BizArea__c</fullName>
    <label>Biz Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KR</fullName>
            </value>
            <value>
                <fullName>SG</fullName>
            </value>
            <value>
                <fullName>VN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>