force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_OrgLv5</valueSetName>
    </valueSet>
</CustomField>