force-app/main/default/objects/COM_ApprovalLineMgmt__c/fields/Teamx__c.field-meta.xml
<CustomField>
    <fullName>Teamx__c</fullName>
    <label>(X)Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRS1팀</fullName>
            </value>
            <value>
                <fullName>CRS2팀</fullName>
            </value>
            <value>
                <fullName>CRS3팀</fullName>
            </value>
            <value>
                <fullName>CRS4팀</fullName>
            </value>
            <value>
                <fullName>CRS5팀</fullName>
            </value>
            <value>
                <fullName>CRS11팀</fullName>
            </value>
            <value>
                <fullName>Biz Admin</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>