force-app/main/default/objects/COM_ApprovalLineMgmt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ApproveType__c</columns>
    <columns>BizArea__c</columns>
    <columns>Team__c</columns>
    <columns>Approver1_lk__c</columns>
    <columns>ApproverLine__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>